0.1 10apr23
* initial version
0.2
* special accumulator for ww and wawa
* fix shutDown function
* fix night determination in examples
* more postprocessing for ww and wawa
0.3
* present weather postprocessing rewritten